# kritbi-hack

./: .env.example  .gitignore  AGENT.md  README.md  docker-compose.no-sim.yml  docker-compose.yml  submission.csv
backend/: Dockerfile  check_forecast.ts  drizzle.config.ts  package.json
backend/src/: index.ts
backend/src/db/: index.ts  schema.ts
backend/src/routes/: alerts.ts  chat.ts  forecast.ts  readings.ts  retrain.ts  sensors.ts
backend/src/ws/: realtime.ts
bot/: main.py  requirements.txt
frontend/: Dockerfile  index.html
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/api/: index.ts  queries.ts  ws.ts
frontend/src/components/: AlertPanel.tsx  Footer.tsx  ForecastWidget.tsx  HistoryChart.tsx  StatsCard.tsx  WaterLevelGauge.tsx
models/: baseline_model_6h.joblib  baseline_model_72h.joblib  model_24h.cbm  model_6h.cbm  model_72h.cbm
predictor/: .dockerignore  .gitignore  9326_1.csv  Dockerfile  README.md  check_importance.py  create_submission.py  debug_predict.py  pyproject.toml  submission.csv  train_baseline.py  train_example.py
predictor/app/: features.py  main.py  model.py  schemas.py
predictor/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
predictor/catboost_info/learn/: events.out.tfevents
predictor/catboost_info/test/: events.out.tfevents
predictor/models/: baseline_model_24h.joblib  baseline_model_72h.joblib  model_24h.cbm  model_48h.cbm  model_6h.cbm  model_72h.cbm
predictor/tests/: test_api.py
simulator/: Dockerfile  index.ts  package.json  simulate_flood.ts
(+3 files in other folders)
