[project]
name = "predictor"
version = "1.0.0"
description = "CatBoost water level prediction microservice for river Kacha"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
